# commonapi_someip_demo

./: CMakeLists.txt  README.md
fidl/: HelloWorld.fdepl  HelloWorld.fidl
src/: HelloWorldClient.cpp  HelloWorldService.cpp  HelloWorldStubImpl.cpp  HelloWorldStubImpl.hpp
src-gen/v1/commonapi/: HelloWorld.hpp  HelloWorldProxy.hpp  HelloWorldProxyBase.hpp  HelloWorldSomeIPDeployment.cpp  HelloWorldSomeIPDeployment.hpp  HelloWorldSomeIPProxy.cpp  HelloWorldSomeIPProxy.hpp  HelloWorldSomeIPStubAdapter.cpp  HelloWorldSomeIPStubAdapter.hpp  HelloWorldStub.hpp  HelloWorldStubDefault.hpp
